# demofusion

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  README.md  README_PYTHON.md  THIRD_PARTY_LICENSES  build.rs  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  python-wheels.yml
demofusion/: __init__.py  _demofusion.pyi
docs/: CONSOLIDATION_PLAN.md  memory_model.md
examples/: combat_detection.rs  damage_locations.rs  hero_positions.rs  lane_control.rs  multi_query.rs  objectives.rs  player_stats.rs  troopers.rs
src/: error.rs  lib.rs  session.rs
src/batch/: batch_accumulator.rs  dynamic_builder.rs  entity_batch_builder.rs  mod.rs
src/datafusion/: distribution_stream.rs  distributor_channels.rs  event_table_provider.rs  filter_pushdown.rs  integration_tests.rs  mod.rs  pipeline_analysis.rs  query_session.rs  stream.rs  streaming_stats.rs  table_providers.rs
src/demo/: mod.rs  session.rs  source.rs
src/events/: batch_builder.rs  mod.rs
src/gotv/: client.rs  config.rs  error.rs  mod.rs  session.rs  source.rs
src/haste/: mod.rs
src/haste/core/: async_broadcast_stream.rs  async_demofile.rs  async_demostream.rs  bitreader.rs  demofile.rs  demostream.rs  entities.rs  entityclasses.rs  fielddecoder.rs  fieldmetadata.rs  fieldpath.rs  fieldvalue.rs  flattenedserializers.rs  fxhash.rs  instancebaseline.rs  mod.rs  packet_channel_broadcast_stream.rs  packet_channel_demo_stream.rs  packet_source.rs  parser.rs  quantizedfloat.rs  stringtables.rs
src/haste/vartype/: mod.rs  parser.rs  span.rs  tokenizer.rs
src/python/: arrow_convert.rs  demo.rs  exceptions.rs  gotv.rs  mod.rs  query_handle.rs  session.rs
src/schema/: field_path_names.rs  mod.rs  schema_builder.rs  symbol_table.rs  type_mapping.rs
src/sql/: mod.rs  table_extractor.rs
src/visitor/: arrow_visitor.rs  batching_entity_dispatcher.rs  batching_event_dispatcher.rs  mod.rs  schema_discovery.rs
tests/: conftest.py  test_api.py  test_e2e.py
