[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "demofusion"
version = "0.1.0"
description = "SQL queries over Valve Source 2 demo files via Apache DataFusion"
readme = "README_PYTHON.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "demofusion contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Typing :: Typed",
]
dependencies = ["pyarrow>=17.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]
gotv = []

[tool.uv]
managed = true

[tool.uv.sources]
demofusion = { path = "." }

[tool.maturin]
features = ["python"]
module-name = "demofusion._demofusion"
